fix issues after updating dependencies