@@ -12,6 +12,7 @@ import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 
 import java.net.MalformedURLException;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Path;
 import java.time.Duration;
@@ -219,9 +220,11 @@ class ReleaseInteractorTest {
 
     private URL url(final String url) {
         try {
-            return new URL(GITHUB_TAG_URL);
+            return new java.net.URI(GITHUB_TAG_URL).toURL();
         } catch (final MalformedURLException exception) {
             throw new IllegalStateException(exception);
+        } catch (URISyntaxException e) {
+            throw new RuntimeException(e);
         }
     }
 }
